Route复习-参数路由的查找与参数传递 完成
第一周课程复习完毕

--- a/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
+++ b/note/ 第1周-Web框架之 Server与路由树 /PART4. 课后复习/route/20. 课后复习-Route.md
@@ -3882,11 +3882,283 @@ func TestRouter_findRoute_param_and_wildcard_coexist(t *testing.T) {
 }
 ```
 
+### 7.4 参数路由的查找
 
+#### 7.4.1 编写测试用例
 
+`router_test.go`
 
+```go
+func TestRouter_findParamRoute(t *testing.T) {
+	// step1. 构造路由树
+	testRoutes := []*TestNode{
+		{
+			method: http.MethodGet,
+			path:   "/order/:id",
+		},
+		{
+			method: http.MethodGet,
+			path:   "/user/:id/detail",
+		},
+	}
 
+	r := newRouter()
+	mockHandle := func(ctx *Context) {}
+	for _, testRoute := range testRoutes {
+		r.addRoute(testRoute.method, testRoute.path, mockHandle)
+	}
 
+	// step2. 构造测试用例
+	testCases := []struct {
+		name     string
+		method   string
+		path     string
+		isFound  bool
+		wantNode *node
+	}{
+		{
+			name:    "param route",
+			method:  http.MethodGet,
+			path:    "/order/5",
+			isFound: true,
+			wantNode: &node{
+				path:          ":id",
+				children:      nil,
+				wildcardChild: nil,
+				paramChild:    nil,
+				HandleFunc:    mockHandle,
+			},
+		},
+		{
+			name:    "param route",
+			method:  http.MethodGet,
+			path:    "/user/1/detail",
+			isFound: true,
+			wantNode: &node{
+				path:          "detail",
+				children:      nil,
+				wildcardChild: nil,
+				paramChild:    nil,
+				HandleFunc:    mockHandle,
+			},
+		},
+	}
 
+	for _, testCase := range testCases {
+		t.Run(testCase.name, func(t *testing.T) {
+			findNode, found := r.findRoute(testCase.method, testCase.path)
+			assert.True(t, found, "节点未找到")
+			if !found {
+				return
+			}
+			msg, equal := testCase.wantNode.equal(findNode)
+			assert.True(t, equal, msg)
+		})
+	}
+}
+```
 
+此时运行测试用例报错节点未找到,因为此时没有查找参数子节点的逻辑
 
+#### 7.4.2 实现参数路由的查找
+
+`node.go`:
+
+```go
+// childOf 本方法用于根据给定的path值 在当前节点的子节点映射中查找path为给定path值的节点
+// 找到则返回节点 否则返回 nil, false
+func (n *node) childOf(path string) (*node, bool) {
+	if n.children == nil {
+		if n.paramChild != nil {
+			return n.paramChild, true
+		}
+
+		return n.wildcardChild, n.wildcardChild != nil
+	}
+
+	child, found := n.children[path]
+	if !found {
+		if n.paramChild != nil {
+			return n.paramChild, true
+		}
+		
+		return n.wildcardChild, n.wildcardChild != nil
+	}
+
+	return child, true
+}
+```
+
+此时测试用例即可通过
+
+### 7.5 参数路由的参数值
+
+#### 7.5.1 定义新类型
+
+需要定义一个新的类型,该类型包含命中的节点,以及当该节点为参数路由节点时的参数名和参数值
+
+`match_node.go`:
+
+```go
+package v4_rc
+
+type matchNode struct {
+	node       *node             // node 命中的节点
+	pathParams map[string]string // pathParams 节点对应的路由参数 其中key为参数名 value为参数值
+}
+```
+
+#### 7.5.2 修改`node.childOf()`方法
+
+`node.childOf()`方法需要告知其调用者(也就是`router.findRoute()`方法)找到的节点是否为参数子节点.因为查找节点时,拿到的是参数值,而参数名是放在查找到的节点的path字段上的.
+
+`node.go`:
+
+```go
+// childOf 本方法用于根据给定的path值 在当前节点的子节点映射中查找对应的子节点
+// 若未在当前节点的子节点映射中查找到path对应的节点 则尝试查找当前节点的参数子节点
+// 若未查找到当前节点的参数子节点 则尝试查找当前节点的通配符子节点
+func (n *node) childOf(path string) (targetNode *node, isParamNode bool, isFound bool) {
+	if n.children == nil {
+		if n.paramChild != nil {
+			return n.paramChild, true, true
+		}
+
+		return n.wildcardChild, false, n.wildcardChild != nil
+	}
+
+	child, found := n.children[path]
+	if !found {
+		if n.paramChild != nil {
+			return n.paramChild, true, true
+		}
+
+		return n.wildcardChild, false, n.wildcardChild != nil
+	}
+
+	return child, false, true
+}
+```
+
+#### 7.5.3 为`matchNode`结构体添加写入路由参数的方法
+
+`match_node.go`:
+
+```go
+// addPathParam 用于添加路径参数
+func (m *matchNode) addPathParam(key string, value string) {
+	if m.pathParams == nil {
+		m.pathParams = make(map[string]string)
+	}
+	m.pathParams[key] = value
+}
+```
+
+#### 7.5.4 修改`router.findRoute()`方法
+
+`router.findRoute()`方法则返回一个`*matchNode`类型的实例,其中包含了参数名和参数值(如果有的话).
+
+`router.go`
+
+```go
+// findRoute 根据给定的HTTP动词和path 在路由树中查找匹配的节点
+func (r *router) findRoute(method string, path string) (*matchNode, bool) {
+	targetMatchNode := &matchNode{}
+	// HTTP动词对应的路由树不存在 直接返回nil false即可
+	root, ok := r.trees[method]
+	if !ok {
+		return nil, false
+	}
+
+	target := root
+	// 对根节点做特殊处理
+	if path == "/" {
+		targetMatchNode.node = target
+		return targetMatchNode, true
+	}
+
+	// 在路由树中逐层查找节点
+	path = strings.TrimLeft(path, "/")
+	pathSegments := strings.Split(path, "/")
+	for _, pathSegment := range pathSegments {
+		child, isParam, ok := target.childOf(pathSegment)
+		if !ok {
+			return nil, false
+		}
+		
+		if isParam {
+			key := strings.TrimPrefix(child.path, ":")
+			value := pathSegment
+			targetMatchNode.addPathParam(key, value)
+		}
+		
+		target = child
+	}
+
+	targetMatchNode.node = target
+	return targetMatchNode, true
+}
+```
+
+#### 7.5.5 修改`Context`结构体
+
+`context.go`
+
+```go
+// Context 路由处理函数的上下文
+type Context struct {
+	Req        *http.Request       // Req HTTP请求
+	Resp       http.ResponseWriter // Resp HTTP响应
+	PathParams map[string]string   // PathParams 参数路由的参数
+}
+```
+
+#### 7.5.6 修改`HTTPServer.serve()`方法
+
+`server.go`
+
+```go
+// serve 查找路由树并执行匹配到的节点所对应的处理函数
+func (s *HTTPServer) serve(ctx *Context) {
+	method := ctx.Req.Method
+	path := ctx.Req.URL.Path
+	targetNode, found := s.router.findRoute(method, path)
+	if !found || targetNode.node.HandleFunc == nil {
+		ctx.Resp.WriteHeader(http.StatusNotFound)
+		_, _ = ctx.Resp.Write([]byte("not found"))
+		return
+	}
+	ctx.PathParams = targetNode.pathParams
+	targetNode.node.HandleFunc(ctx)
+}
+```
+
+#### 7.5.7 测试HTTPServer
+
+`server_test.go`:
+
+```go
+func TestServer_Start(t *testing.T) {
+	s := NewHTTPServer()
+
+	wildcardHandleFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte("hello order wildcard"))
+	}
+	s.addRoute(http.MethodGet, "/order/*", wildcardHandleFunc)
+
+	handleFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte("hello order detail"))
+	}
+	s.addRoute(http.MethodGet, "/order/detail", handleFunc)
+
+	paramFunc := func(ctx *Context) {
+		ctx.Resp.Write([]byte(fmt.Sprintf("%s", ctx.PathParams)))
+	}
+	s.addRoute(http.MethodGet, "/user/:id", paramFunc)
+
+	err := s.Start(":8081")
+	if err != nil {
+		t.Fatal(err)
+	}
+}
+```
