修正图片路径

--- a/note/ 第2周-Web框架之Context与AOP方案/PART1. Context/1. Context-简介.md
+++ b/note/ 第2周-Web框架之Context与AOP方案/PART1. Context/1. Context-简介.md
@@ -1,6 +1,6 @@
 # 1. Context-简介
 
-![Context处理输入输出](../img/1.Context简介/Context处理输入输出.png)
+![Context处理输入输出](../img/1.Context-简介/Context处理输入输出.png)
 
 ## PART1. HTTP语法简介
 
@@ -45,9 +45,9 @@ type ResponseWriter interface {
 
 复杂的是[`http.Request`](https://github.com/golang/go/blob/master/src/net/http/request.go#L111),其方法如下两图示:
 
-![http.Request的API-1](../img/1.Context简介/http.Request的API-1.png)
+![http.Request的API-1](../img/1.Context-简介/http.Request的API-1.png)
 
-![http.Request的API-2](../img/1.Context简介/http.Request的API-2.png)
+![http.Request的API-2](../img/1.Context-简介/http.Request的API-2.png)
 
 这些不用背,靠IDE的代码提示就行了.核心原则:**API不需要背的**.
 
@@ -86,7 +86,7 @@ func readBodyOnce(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-![读取2次Request.Body](../img/1.Context简介/读取2次Request.Body.png)
+![读取2次Request.Body](../img/1.Context-简介/读取2次Request.Body.png)
 
 注:此处老师上课说GET方法没有`http.Request.Body`,但实际上通过POSTMAN测试可以读取到,具体原因见附录.
 
@@ -135,7 +135,7 @@ func getBodyIsNil(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-![http.Request.GetBody.png](../img/1.Context简介/http.Request.GetBody.png)
+![http.Request.GetBody.png](../img/1.Context-简介/http.Request.GetBody.png)
 
 [`http.Request.GetBody`](https://github.com/golang/go/blob/master/src/net/http/request.go#L194)属性:**原则上可以多次读取**,但是在原生的`http.Request`中,其值恒为nil.所以有一些web框架在收到请求之后,第一件事就是给`http.Request.GetBody`赋值.注意其类型为`func() (io.ReadCloser, error)`.
 
@@ -164,7 +164,7 @@ func queryParams(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-![http.Request.URL.Query](../img/1.Context简介/http.Request.URL.Query.png)
+![http.Request.URL.Query](../img/1.Context-简介/http.Request.URL.Query.png)
 
 注意,[`http.Request.URL.Query()`方法](https://github.com/golang/go/blob/master/src/net/url/url.go#L1121)的返回值类型为[`url.Values`](https://github.com/golang/go/blob/master/src/net/url/url.go#L886).
 
@@ -209,7 +209,7 @@ func header(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-![http.Request.Header](../img/1.Context简介/http.Request.Header.png)
+![http.Request.Header](../img/1.Context-简介/http.Request.Header.png)
 
 Header大体上分为2类,**一类是HTTP预定义的,另一类是自己定义的**.
 
@@ -251,9 +251,9 @@ func form(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-![http.Request.Form-表单参数](../img/1.Context简介/http.Request.Form-表单参数.png)
+![http.Request.Form-表单参数](../img/1.Context-简介/http.Request.Form-表单参数.png)
 
-![http.Request.Form-请求头](../img/1.Context简介/http.Request.Form-请求头.png)
+![http.Request.Form-请求头](../img/1.Context-简介/http.Request.Form-请求头.png)
 
 [`http.Request.Form`](https://github.com/golang/go/blob/master/src/net/http/request.go#L249)的类型同样为[`url.Values`](https://github.com/golang/go/blob/master/src/net/url/url.go#L886).
 
