--- a/note/第2周-Web框架之Context与AOP方案/PART1. Context/10. Context-总结与面试要点.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART1. Context/10. Context-总结与面试要点.md
@@ -344,3 +344,28 @@ func (s StringValue[T]) AsFloat64() (t T, err error) {
 Web框架在发现匹配上了某个路径参数之后,将这段路径记录下来作为路径参数的值.这个值默认是string类型,用户自己可以转化为不同的类型
 
 [查找路由时写入路径参数](https://github.com/rayallen20/GoInAction/blob/master/code/week1/server/v4/router.go#L143)
+
+### 4.5 v5版本的实现
+
+最终v5版本的实现如下(GoInAction/code/week2/context/v5):
+
+```
+(base) yanglei@bogon v5 % tree ./
+./
+├── context.go
+├── context_test.go
+├── go.mod
+├── go.sum
+├── handleFunc.go
+├── httpServer.go
+├── httpServer_test.go
+├── matchNode.go
+├── node.go
+├── router.go
+├── router_test.go
+├── safeContext.go
+├── serverInterface.go
+└── stringValue.go
+
+0 directories, 14 files
+```
