v6版本忘了创建了

--- a/note/第2周-Web框架之Context与AOP方案/PART2. AOP/12. AOP设计方案-Middleware.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART2. AOP/12. AOP设计方案-Middleware.md
@@ -352,6 +352,31 @@ func (c ConcurrentHandleFunc) Run(ctx *Context) {
 
 最简单的方案就是我们课程上讲的这种函数式方案,还有一种是集中调度的模式
 
+最终v6版本的实现如下(GoInAction/code/week2/aop/v6):
+
+```
+(base) yanglei@yuanhong v6 % tree ./
+./
+├── context.go
+├── context_test.go
+├── go.mod
+├── go.sum
+├── handleFunc.go
+├── httpServer.go
+├── httpServer_test.go
+├── matchNode.go
+├── middleware.go
+├── middleware_test.go
+├── node.go
+├── router.go
+├── router_test.go
+├── safeContext.go
+├── serverInterface.go
+└── stringValue.go
+
+0 directories, 16 files
+```
+
 ## 附录
 
 ### 1. 方法值
