13. Middleware-AccessLog 完成

--- a/note/第2周-Web框架之Context与AOP方案/PART2. AOP/12. AOP设计方案-Middleware.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART2. AOP/12. AOP设计方案-Middleware.md
@@ -274,6 +274,8 @@ Process finished with the exit code 0
 
 ![被打断的时序图](../img/12.AOP设计方案-Middleware/被打断的时序图.png)
 
+**所以实际上,从后往前遍历的过程,类似于压栈,先入后出**.
+
 ## PART4. 面试要点
 
 ### 4.1 什么是AOP?
