--- a/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/15. Middleware-OpenTelemetry测试.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/15. Middleware-OpenTelemetry测试.md
@@ -906,3 +906,7 @@ func (m *MiddlewareBuilder) Build() web.Middleware {
 ![获取到host和响应码的span](../img/15.Middleware-OpenTelemetry测试/获取到host和响应码的span.png)
 
 至此,链路追踪中间件开发完成
+
+## 附录
+
+TODO: 我在写的时候,想过将`http.ResponseWriter`直接设置为私有字段,有时间了我自己试一下
