fix bug: 关于中间件执行顺序的部分有误 已修复

--- a/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/15. Middleware-OpenTelemetry测试.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/15. Middleware-OpenTelemetry测试.md
@@ -631,9 +631,11 @@ func (s *HTTPServer) serve(ctx *Context) {
 
 这一步的问题在于:该在什么事件节点上把`RespJSON()`和`server()`中提供的响应状态码和响应数据,刷到响应上呢?
 
-答案比较明显:在调用完`server()`(也就是查找并执行了对应的HandleFunc)之后,立即应该将响应状态码和响应数据刷到响应上,方便后续的中间件进行读写操作(写响应就相当于是篡改响应的操作了)
+答案比较明显:在所有的中间件对响应状态码和响应数据的读写操作(中间件进行写响应就相当于是篡改响应的操作了)都完成后,换言之即响应返回给客户端之前,将把`RespJSON()`和`server()`中提供的响应状态码和响应数据刷到响应上
 
-注意我们中间件的顺序问题:先添加的中间件后执行,因此我们这里应该最后把刷响应的中间件添加上去,确保其最先执行:
+注意我们中间件的顺序问题:**中间件中在`next(ctx)`之前的代码,是后添加的中间件先执行;中间件中在`next(ctx)`之后的代码,是先添加的中间件先执行**
+
+因此应该**在中间件链的"头部"(这里我们将先添加的中间件称为"尾部",后添加的中间件称为"头部")添加一个在`next(ctx)`之后执行的中间件**:
 
 `httpServer.go`:
 
@@ -663,7 +665,8 @@ func (s *HTTPServer) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 	// 最后注册将响应数据和响应码写入到响应体中的中间件
-	// 确保这个中间件是执行完HandleFunc之后第一个执行的中间件
+	// 确保这个中间件是执行完所有对响应码和响应数据的读写操作后才执行的
+	// 换言之,确保这个中间件是返回响应之前最后一个执行的
 	root = m(root)
 
 	// 查找路由树并执行命中的业务逻辑
@@ -729,7 +732,8 @@ func (s *HTTPServer) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 	// 最后注册将响应数据和响应码写入到响应体中的中间件
-	// 确保这个中间件是执行完HandleFunc之后第一个执行的中间件
+	// 确保这个中间件是执行完所有对响应码和响应数据的读写操作后才执行的
+	// 换言之,确保这个中间件是返回响应之前最后一个执行的
 	root = m(root)
 
 	// 查找路由树并执行命中的业务逻辑
@@ -737,7 +741,62 @@ func (s *HTTPServer) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 }
 ```
 
-- step3. 初始化`HTTPServer`时,初始化日志函数
+- step3. 将中间件的处理抽象成一个方法
+
+`httpServer.go`:
+
+```go
+// ServeHTTP WEB框架入口
+func (s *HTTPServer) ServeHTTP(w http.ResponseWriter, r *http.Request) {
+	// 构建上下文
+	ctx := &Context{
+		Req:  r,
+		Resp: w,
+	}
+
+	// 执行中间件链
+	root := s.serve
+	for i := len(s.middlewares) - 1; i >= 0; i-- {
+		root = s.middlewares[i](root)
+	}
+
+	var m Middleware = func(next HandleFunc) HandleFunc {
+		return func(ctx *Context) {
+			next(ctx)
+			s.flashResp(ctx)
+		}
+	}
+	// 最后注册将响应数据和响应码写入到响应体中的中间件
+	// 确保这个中间件是执行完所有对响应码和响应数据的读写操作后才执行的
+	// 换言之,确保这个中间件是返回响应之前最后一个执行的
+	root = m(root)
+
+	// 查找路由树并执行命中的业务逻辑
+	root(ctx)
+}
+
+// flashResp 将响应数据和响应码写入到响应体中
+func (s *HTTPServer) flashResp(ctx *Context) {
+	// 若使用者设置了响应码 则刷到响应上
+	if ctx.RespStatusCode != 0 {
+		ctx.Resp.WriteHeader(ctx.RespStatusCode)
+	}
+	
+	// 刷响应数据到响应上
+	n, err := ctx.Resp.Write(ctx.RespData)
+	if err != nil {
+		s.logFunc("响应数据写入失败: %v", err)
+	}
+
+	if n != len(ctx.RespData) {
+		s.logFunc("响应数据写入不完全, 期望写入: %d 字节, 实际写入: %d 字节", len(ctx.RespData), n)
+	}
+}
+```
+
+**注意这里要先刷响应码再刷响应数据**
+
+- step4. 初始化`HTTPServer`时,初始化日志函数
 
 这里如果使用者需要注入自定义的日志函数,仅需传入一个`ServerOption`即可.所以这里要做的只是提供一个默认的日志函数:
 
