附录3:函数选项模式 完成

--- a/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/13. Middleware-AccessLog.md
+++ b/note/第2周-Web框架之Context与AOP方案/PART3. Middleware/13. Middleware-AccessLog.md
@@ -509,7 +509,7 @@ package web
 type Option func(server *HTTPServer)
 ```
 
-注意这个结构体的类型为`func(server *web.HTTPServer)`,我们在这个函数的内部修改`web.HTTPServer`实例的属性值即可
+注意类型`Option`的本质是`func(server *web.HTTPServer)`,我们在这个函数的内部修改`web.HTTPServer`实例的属性值即可
 
 第2个问题随之而来:怎么修改`web.HTTPServer`实例的属性值?
 
